Terminada v1, falta probar, jona y alan

--- a/proyecto/individuales/rebeca/view/formCountry.html
+++ b/proyecto/individuales/rebeca/view/formCountry.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     
-    <form action="../buis/LanguageR.php" method="post">
+    <form action="../buis/CountryR.php" method="post">
     <ul>
     <fieldset>
-        <legend>Language</legend>
-    <li> <label>Language</label> 
-        <input class="input1" type="text" name="txtlanguage" required>
+        <legend>Country</legend>
+    <li> <label>Country</label> 
+        <input class="input1" type="text" name="txtcountry" required>
     </li>
 
 </fieldset>
